--- a/Tansilotren/css/style.css
+++ b/Tansilotren/css/style.css
@@ -649,7 +649,7 @@ h2 b {
 }
 
 .panel {
-  max-width: 80%;
+  max-width: 100%;
   /*margin: auto;*/
   margin-top: 10px;
   margin-bottom: 100px;
@@ -760,6 +760,7 @@ h2 b {
   font-size: 16px;
   line-height: 20px;
   margin: 40px 0;
+  margin-bottom: 0;
   color: #636363;
   font-family: 'HNL';
 }
@@ -1133,8 +1134,10 @@ h2 b {
   }
 
   .instruction {
-    height: 40px;
-    width: 40px;
+    height: 60px;
+    width: 60px;
+    top: 60px;
+    left: 5px;
   }
   .instruction p {
     left: -10px;
@@ -1313,7 +1316,8 @@ h2 b {
   }
 
   .header-title {
-    margin-bottom: 50px;
+    margin-bottom: 30px;
+    margin-top: 30px;
   }
 
   .block-5__plate {
@@ -1346,8 +1350,8 @@ h2 b {
   }
 
   .panel {
-    width: 90%;
     margin-top: 100px;
+    margin-bottom: 40px;
   }
 
   .accordion-right {
